Work around for JEP 396 to make it possible to mock System clock in tests.
More info in https://github.com/mockk/mockk/issues/681 and https://openjdk.org/jeps/396